hphp/test/slow/unstable_features/default_disable_unstable_features.php.expectf
Fatal error: Cannot enable unstable feature: union_intersection_type_hints is unstable and unstable features are disabled in %s on line 6
